feat: возможность пользователю отвязать себя из квартиры
